--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
         </div>
         <div class="img-col">
-            <img src="C:\Users\new\Documents\netflix\feature-1.png">
+            <img src="https://github.com/Shruti44328/Netflix-homepage/blob/main/feature-1.png?raw=true">
         </div>
        </div>
        <div class="row">
