--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <nav>
         <img src="C:\Users\new\Documents\netflix\logo.png" class="logo">
         <div>
-            <button class="language-btn"> English <img src="C:\Users\new\Documents\netflix\down-icon.png"></button>
+            <button class="language-btn"> English <img src="C:\Users\new\Downloads\down-icon.png"></button>
             <button>Sign In</button>
         </div>
      </nav>
