--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        </div>
        <div class="row">
         <div class="img-col">
-            <img src="C:\Users\new\Documents\netflix\feature-2.png">
+            <img src="https://github.com/Shruti44328/Netflix-homepage/blob/main/feature-2.png?raw=true">
         </div>
         <div class="text-col">
             <h2>Download your shows to watch offline</h2>
