--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
         </div>
         <div class="img-col">
-            <img src="C:\Users\new\Documents\netflix\feature-3.png">
+            <img src="https://github.com/Shruti44328/Netflix-homepage/blob/main/feature-3.png?raw=true">
         </div>
        </div>
        <div class="row">
