--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
        </div>
        <div class="row">
         <div class="img-col">
-            <img src="C:\Users\new\Documents\netflix\feature-4.png">
+            <img src="https://github.com/Shruti44328/Netflix-homepage/blob/main/feature-4.png?raw=true">
         </div>
         <div class="text-col">
             <h2>Create profiles for kids</h2>
