--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="header">
      <nav>
-        <img src="C:\Users\new\Documents\netflix\logo.png" class="logo">
+        <img src="https://github.com/Shruti44328/Netflix-homepage/blob/main/logo.png?raw=true" class="logo">
         <div>
             <button class="language-btn"> English <img src="C:\Users\new\Downloads\down-icon.png"></button>
             <button>Sign In</button>
