--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     </div>
   </div>
-  <button class="language-btn"> English <img src="C:\Users\new\Documents\netflix\down-icon.png"></button>
+  <button class="language-btn"> English <img src="C:\Users\new\Downloads\down-icon.png"></button>
   <p class="copyright-txt">Netflix India</p>
 </div>
 </body>
