--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <nav>
         <img src="https://github.com/Shruti44328/Netflix-homepage/blob/main/logo.png?raw=true" class="logo">
         <div>
-            <button class="language-btn"> English <img src="https://github.com/Shruti44328/Netflix-homepage/blob/main/Screenshot%202023-07-24%20164754.png?raw=true"></button>
+            <button class="language-btn"> English <img src="Screenshot 2023-07-24 164754.png"></button>
             <button>Sign In</button>
         </div>
      </nav>
@@ -151,7 +151,7 @@
 
     </div>
   </div>
-  <button class="language-btn"> English <img src="https://github.com/Shruti44328/Netflix-homepage/blob/main/Screenshot%202023-07-24%20164754.png?raw=true"></button>
+  <button class="language-btn"> English <img src="Screenshot 2023-07-24 164754.png"></button>
   <p class="copyright-txt">Netflix India</p>
 </div>
 </body>
