--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
      <nav>
         <img src="https://github.com/Shruti44328/Netflix-homepage/blob/main/logo.png?raw=true" class="logo">
         <div>
+            <button class="language-btn"> English</button>
             <button>Sign In</button>
         </div>
      </nav>
@@ -150,6 +151,7 @@
 
     </div>
   </div>
+       <button class="language-btn"> English </button>
   <p class="copyright-txt">Netflix India</p>
 </div>
 </body>
