--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <nav>
         <img src="https://github.com/Shruti44328/Netflix-homepage/blob/main/logo.png?raw=true" class="logo">
         <div>
-            <button class="language-btn"> English</button>
+            <button class="language-btn"> English <img src="C:\Users\new\Documents\netflix\down-icon.png"></button>
             <button>Sign In</button>
         </div>
      </nav>
@@ -151,7 +151,7 @@
 
     </div>
   </div>
-       <button class="language-btn"> English </button>
+       <button class="language-btn"> English <img src="C:\Users\new\Documents\netflix\down-icon.png"></button>
   <p class="copyright-txt">Netflix India</p>
 </div>
 </body>
